[package]
name = "di-dcnc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
derive-new = "0.6.0"
log = "0.4.21"
log4rs = "1.3.0"
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"

[features]
check_variable=[]

[profile.release]
lto = "fat"